[gd_scene load_steps=3 format=3 uid="uid://br04ukgscyokl"]

[ext_resource type="Script" path="res://menu.gd" id="1_4adjh"]
[ext_resource type="Texture2D" uid="uid://vwfrfn4j7qbw" path="res://background.jpg" id="2_ag8dq"]

[node name="menu" type="Node2D"]
script = ExtResource("1_4adjh")

[node name="background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_ag8dq")
expand_mode = 2

[node name="connect_button" type="Button" parent="."]
offset_left = 192.0
offset_top = 256.0
offset_right = 424.0
offset_bottom = 320.0
text = "Connect"

[node name="host_button" type="Button" parent="."]
offset_left = 424.0
offset_top = 256.0
offset_right = 576.0
offset_bottom = 320.0
text = "Host"

[node name="ip_input" type="LineEdit" parent="."]
offset_left = 208.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 256.0
text = "127.0.0.1"
placeholder_text = "IP Address"

[node name="port_input" type="LineEdit" parent="."]
offset_left = 448.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
text = "8910"
placeholder_text = "Port"

[node name="nick_input" type="LineEdit" parent="."]
offset_left = 192.0
offset_top = 144.0
offset_right = 448.0
offset_bottom = 192.0
placeholder_text = "Nickname"

[node name="version_label" type="Label" parent="."]
offset_left = 16.0
offset_top = 520.0
offset_right = 136.0
offset_bottom = 592.0
text = "Version ????????????????????????????????????????????????????????????????"

[node name="error" type="AcceptDialog" parent="."]
title = "Error"
